# AdventOfCodeCpp

./: CMakeLists.txt  build_and_run.sh
days/day0/: day0.cpp  day0.h
include/: Day.h  advent_general.h  inputHandler.h
src/: advent_general.cpp  inputHandler.cpp  main.cpp
